premium: enable flexible settings with bbolt db
Remove policy.conf management and switch to bbolt db for managing
premium settings. Provide APIs for cln and lnd to interact with
premium.

- Implement Observer for premium updates
- Poller detects updates and performs polling
